--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,13 +1,24 @@
 .navbar {
-  background-color: #ffffff !important;
-  color: #CE824A;
-  padding: 5px 5px;}
+  
+  padding-left: 100px; 
+  padding-right: 100px; 
+  padding-top: 16px; 
+  padding-bottom: 16px; 
+  background: linear-gradient(90deg, black 0%, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.10) 100%);
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25); 
+   backdrop-filter: blur(40px); 
+   justify-content: space-between; 
+   align-items: center; }
 
-
+   .navbar-brand{
+    height: 90px;
+    display: inline-flex;
+   }
 .navbar-container {
-  display: flex;
+  display: inline-flex;
   position: fixed;
   align-items: center;
+  height: 72px;
 }
  .nav-menu {
   list-style: none;
@@ -21,7 +32,7 @@
   
 }
 .nav-link{
-  color:#182177;
+  color:#ffffff;
   text-decoration: none;
   font-size: 20px;
   }
