--- a/src/custom styles/home.css
+++ b/src/custom styles/home.css
@@ -26,3 +26,53 @@
     -webkit-text-fill-color: transparent; /* Make the text transparent where the background is applied */
 }
 
+.custom-h1{
+  font-weight: bold;
+  font-size: 40px;
+}
+.custom-h2{
+  font-weight: 600;
+}
+.custom-button1{
+  margin-top: 60px;
+  margin-right: 50px;
+  width: 10rem;
+  height: 2rem;
+  background-color: #070769;
+  color:white;
+  border-radius: 8px;
+  text-align: center;
+}
+.custom-button2{
+  margin-top: 60px;
+  margin-left: 50px;
+  width: 10rem;
+  height: 2rem;
+  text-align: center;
+  background: transparent;
+  color:#070769;
+  border-radius: 8px;
+  border: 3px solid #070769;
+}
+/* Responsive styles for smaller screens */
+@media (max-width: 768px) {
+  .custom-h1 {
+    font-size: 32px; /* Reduce font size for smaller screens */
+    padding: 40px;
+  }
+
+  .custom-h2 {
+    font-size: 18px; /* Reduce font size for smaller screens */
+    padding: 40px;
+  }
+
+  .custom-button1,
+  .custom-button2 {
+    margin: 10px ; /* Reduce margin for smaller screens */
+ 
+  
+    width: 100%; /* Make buttons full width for smaller screens */
+  }
+}
+
+
