--- a/src/pages/entp.css
+++ b/src/pages/entp.css
@@ -9,10 +9,8 @@
 
 
 
-
-
 .Entp{
-    background-color: #e8f4ff !important;
+    background-color:  #C3E5FF !important;
     padding-top: 0px !important;
   }
 
@@ -352,14 +350,13 @@ button {
     float: left;
    
     /* background-image: url(../images/services-bg.png); */
-    height: 100vh;
-    /* margin-top: 75px; */
-    margin-top: 10px;/*custom*/
-    padding-bottom: 60px;
+
+    padding-top: 10px;
+    padding-bottom: 100px;
     background-size: 100%;
 }
 
-/* .services_taital {
+.services_taital {
     color: #1b5a8d !important;
     width: 100%;
     float: left;
@@ -368,8 +365,8 @@ button {
     padding-top: 10px;
     text-transform: uppercase;
     font-weight: bold;
-} */
-/* .services_taital::after {
+}
+.services_taital::after {
     content: '';
     background-color: #f9b234;
     position: absolute;
@@ -383,18 +380,30 @@ button {
     height: 7px;
     left: 0;
     border-radius: 100px;
-} */
+}
+.normal-heading {
+    font-size: 44px;
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.7);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #070769;
+  }
 .services_text {
     width: 90%;
-    float: left;
+    /* float: left; */
+    max-width: 403px; /*custom*/
     font-size: 22px;
     font-weight: 300;
     color: #060606;
-    margin-left: 0px;
-    margin-top: 0px;
-    text-align: center;
+    margin: 0 auto; /* Center horizontally */
+  margin-top: 5px; /* Adjusted margin-top */
+  padding: 0 20px; /* Added padding for content */
     line-height: 26.63px;
+    letter-spacing: 0em;
+    text-align: left;
 }
+
 .moremore_bt {
     width: 170px;
     float: left;
@@ -417,18 +426,27 @@ button {
     color: #181818;
     border: 2px solid #f9b234;
 }
-.image_1{
-    /* this is overriding the img css */
-    /* max-height: 550px; */
-    max-width: 100%; /* Adjust as needed */
-    max-height: 100%; /* Adjust as needed */
-    width: auto;
-    height: auto;
+.image_1 {
+    width: 110%; /* Increase the width to make the image wider horizontally */
+    height: 68vh; /* Set the height to 60% of the viewport height */
+    max-width: none; /* Remove the max-width constraint */
+    max-height: none; /* Remove the max-height constraint */
+    border-radius: 121px 0px 121px 0px;
+
+  }
+  
+  .image_2 {
+    width: 100%; /* Increase the width to make the image wider horizontally */
+    height: 68vh; /* Set the height to 60% of the viewport height */
+    max-width: none; /* Remove the max-width constraint */
+    max-height: none; /* Remove the max-height constraint */
     
-    float: left;
-    border-top-right-radius: 20%;
-    border-bottom-left-radius:20% ;
-}
+    /* Specify the border-radius for individual corners */
+    /* border-radius: 121px 0px 0px 121px; */
+    border-radius: 0px 121px 0px 121px;
+  }
+  
+  
 .custom-bttn{
     width:auto;
     color:#f9b234 ;
