--- a/src/custom styles/home.css
+++ b/src/custom styles/home.css
@@ -12,7 +12,15 @@
   .blue-text {
     color: #070769; /* or any other shade of blue you prefer */
   }
-  
+  .custom-font{
+    color: #000;
+text-align: center;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+  }
 .transparent-heading {
     font-size: 44px;
     font-weight: bold;
