--- a/src/pages/entp.css
+++ b/src/pages/entp.css
@@ -200,8 +200,11 @@ button {
   background-color: #f8f9fa!important;
 }
 .header_left{
-    width: 50%;
-    float: left;
+    /* width: 50%;
+    float: left; */
+    /* custom below */
+    width: 65%;
+    padding: 5%;
 }
 .header_right{
     width: 50%;
@@ -231,6 +234,8 @@ button {
     width: 100%;
     float: left;
     padding-left: 100px;
+  
+    padding-bottom: 13%; /*custom*/
 }
 .banner_taital {
     width: 100%;
